--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -5,6 +5,14 @@
 
 $gray-midium-light: #eaeaea;
 
+/* mixin */
+
+@mixin box_sizing {
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
 /* universal */
 
 body {
@@ -55,6 +63,7 @@ p {
 #logo {
     float: left;
     margin-right: 10px;
+    margin-left: 40px;
     font-size: 1.7em;
     color: #fff;
     text-transform: uppercase;
@@ -66,6 +75,11 @@ p {
         color: #fff;
         text-decoration: none;
     }
+}
+
+.nav.navbar-nav.navbar-right {
+    margin-right: 40px;
+    margin-left: 10px;
 }
 
 /* footer */
@@ -98,4 +112,55 @@ footer {
             margin-left: 15px;
         }
     }
+}
+
+/* miscellaneous */
+
+.debug_dump {
+    clear: both;
+    float: left;
+    width: 100%;
+    margin-top: 45px;
+    @include box_sizing;
+}
+
+/* sidebar */
+
+aside {
+    section.user_info {
+        margin-top: 20px;
+    }
+    section {
+        padding: 10px 0;
+        margin-top: 20px;
+        &:first-child {
+            border: 0;
+            padding-top: 0;
+        }
+        span {
+            display: block;
+            margin-bottom: 0;
+        }
+        span {
+            display: block;
+            margin-bottom: 3px;
+            line-height: 1;
+        }
+        h1 {
+            font-size: 1.4em;
+            text-align: left;
+            letter-spacing: -1px;
+            margin-bottom: 3px;
+            margin-top: 0px;
+        }
+    }
+}
+
+.gravatar {
+    float: left;
+    margin-right: 10px;
+}
+
+.gravatar_edit {
+    margin-top: 15px;
 }
