--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,5 @@
 <% if logged_in? %>
-  <%= render 'users/user_home' %>
+  <%= render 'static_pages/user_home' %>
 <% else %>
-  <%= render 'default_home' %>
+  <%= render 'static_pages/default_home' %>
 <% end %>
